Armstrong Science Defs, Orbit Icon Changes
* Add Apoapsis and Periapsis indicators for eccentric Early Game Belt asteroids and Bifrost. Toggleable settings patch version to come later?
* Remove Kerbin and Sun Science definitions.
* Add all stock science definitions to Armstrong for most biomes and some situations.
* Change identifiers to match names for Tritonis system.
* Change identifier to match name on Millie.
* Change identifier to match name on Armstrong.
* Change orbit icon color for Armstrong
* Add ocean and brown day-side atmosphere to Armstrong when Scatterer is not installed.
* Give Garner an asteroid orbit icon (it's basically the same size as Schmev after all)
* Change orbit icon color for Lu and Haut-Oklo.

--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek.cfg
@@ -6,7 +6,7 @@
 	{
 		//you can change the name and displayName but please do not change the identifier.
 		name = Tritonis
-		identifier = PJ2/IlioC_Greek
+		identifier = PJ2/Tritonis
 		Template
 		{
 			name = Jool //placeholder
