--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_A.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_A.cfg
@@ -6,7 +6,7 @@
 	{
 		//you can change the name and displayName but please do not change the identifier.
 		name = Andro
-		identifier = PJ2/IlioC_Greek_A
+		identifier = PJ2/Andro
 		Template
 		{
 			name = Gilly 
@@ -32,7 +32,7 @@
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
 			color = 0.5,0.5,0.5,1
 			
-			referenceBody = PJ2/IlioC_Greek
+			referenceBody = PJ2/Tritonis
 			//1 kAU (kerbal-scale AU)
 			semiMajorAxis = 16974900
 			inclination = 0 
