--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_C.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_C.cfg
@@ -6,7 +6,7 @@
 	{
 		//you can change the name and displayName but please do not change the identifier.
 		name = Trithus
-		identifier = PJ2/IlioC_Greek_C
+		identifier = PJ2/Trithus
 		Template
 		{
 			name = Tylo 
@@ -31,7 +31,7 @@
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
 			color = 0.5,0.5,0.5,1
 			
-			referenceBody = PJ2/IlioC_Greek
+			referenceBody = PJ2/Tritonis
 
 			semiMajorAxis = 92600000
 			inclination = 182
