--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/Homeworld.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/Homeworld.cfg
@@ -2,13 +2,13 @@
 {
 	@Body[Kerbin]:NEEDS[!InterstellarConsortium]
     {
-        @identifier = PJ2/Homeworld
+        @identifier = PJ2/Armstrong
     }
     +Body[Kerbin]:NEEDS[InterstellarConsortium]
     {
-        @identifier = PJ2/Homeworld
+        @identifier = PJ2/Armstrong
     }
-    @Body:HAS[#identifier[PJ2/Homeworld]]
+    @Body:HAS[#identifier[PJ2/Armstrong]]
 	{
 		cacheFile = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/Cache/Armstrong.bin
 		SpaceCenter
@@ -39,6 +39,7 @@
 			meanAnomalyAtEpochD = 0
 			argumentOfPeriapsis = 0
 			longitudeOfAscendingNode = 0
+			color = 0.968099594,0.953695416,0.86847651,0.501960814
 			
 			semiMajorAxis = 2.11563337e10 //root 2 kAU in meters
 		}
@@ -144,6 +145,13 @@
 				}
 				Biome
 				{
+					name = PolarBasin
+					displayName = North Polar Impact Basin
+					color = RGBA(255,166,227,255)
+					value = 1
+				}
+				Biome
+				{
 					name = TerminatorMountains
 					displayName = Terminator Mountains
 					color = RGBA(60,60,60,255)
@@ -226,15 +234,9 @@
 					color = RGBA(201,13,123,255)
 					value = 1
 				}
-				Biome
-				{
-					name = PolarBasin
-					displayName = North Polar Impact Basin
-					color = RGBA(255,166,227,255)
-					value = 1
-				}
 			}
 		}
+		@Ocean{}
 		!Atmosphere{}
 		Atmosphere				
 		{				
@@ -249,6 +251,10 @@
 			atmosphereMolarMass =	0.03173			
 			temperatureSeaLevel =	460			
 			staticPressureASL =	101.32500	
+			atmosphereFromGround
+			{
+				waveLength = 0.509465635,0.588402689,0.643137276,0
+			}
 			temperatureCurve				
 			{				
 			key =	0	290	0.00000E+00	-9.00000E-03
