--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Garner/Garner.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Garner/Garner.cfg
@@ -74,6 +74,7 @@
 			argumentOfPeriapsis = 0
 			longitudeOfAscendingNode = 0
 			color = 0.518,0.604,0.600,1
+			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/Icons/SpaceObject_Large.png
 
 			semiMajorAxis = 14959787070
 			//SMA in kAU:
