--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Lu/Lu.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Lu/Lu.cfg
@@ -61,7 +61,7 @@
 			meanAnomalyAtEpochD = -30
 			argumentOfPeriapsis = -10
 			longitudeOfAscendingNode = -20
-			color = RGBA(94,76,79,255)
+			color = 0.576319873,0.467269987,0.513650298,1
 
 			semiMajorAxis = 14959787070
 			//SMA in kAU:
