--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/0_ARM_Asteroids.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/0_ARM_Asteroids.cfg
@@ -9,7 +9,7 @@
             {
                 Body
                 {
-                    body = PJ2/Homeworld
+                    body = PJ2/Armstrong
                     minDuration = 15
                     maxDuration = 60
                     probability = 66
