--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/10_Asteroid_Quank.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/10_Asteroid_Quank.cfg
@@ -67,6 +67,7 @@
 			argumentOfPeriapsis = 154
 			meanAnomalyAtEpochD = 73
 			inclination = 6.0
+			icon = OBJ_PE_AP
 		}
         ScaledVersion
         {
