--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/3_Asteroid_LostHalfWeegletoss.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/3_Asteroid_LostHalfWeegletoss.cfg
@@ -115,6 +115,7 @@
 			argumentOfPeriapsis = 229
 			meanAnomalyAtEpochD = 163
 			inclination = 0.75
+			icon = OBJ_PE_AP
 		}
 		ScaledVersion
 		{
