--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_c/IlioC_c.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_c/IlioC_c.cfg
@@ -6,7 +6,7 @@
 	{
 		//you can change the name and displayName but please do not change the identifier.
 		name = HautOklo
-		identifier = PJ2/IlioC_c
+		identifier = PJ2/HautOklo
 		Template
 		{
 			name = Ike
@@ -78,7 +78,7 @@
 			referenceBody = PJ2/C_Pyri
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
-			color = 0.5,0.4,0.15,1
+			color = 0.611538351,0.6961537,0.500000119,1
 			
 			//orbital elements (DO NOT CHANGE)
 			//1 au (kerbal scale)
