--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/0-Bifrost.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/0-Bifrost.cfg
@@ -69,6 +69,8 @@
 			argumentOfPeriapsis = 273
 			meanAnomalyAtEpochD = 338
 			inclination = 2.3
+			
+			icon = OBJ_PE_AP
 		}
 		ScaledVersion
 		{
