--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Trojan/Millie.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Trojan/Millie.cfg
@@ -6,7 +6,7 @@
 	{
 		//you can change the name and displayName but please do not change the identifier.
 		name = Millie
-		identifier = PJ2/IlioC_Trojan
+		identifier = PJ2/Millie
 		cacheFile = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Trojan/Cache/Millie.bin
 		Template
 		{
