--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/8_Asteroid_Raft.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/8_Asteroid_Raft.cfg
@@ -47,6 +47,7 @@
 			argumentOfPeriapsis = 145
 			meanAnomalyAtEpochD = 88
 			inclination = 6.79
+			icon = OBJ_PE_AP
 		}
         ScaledVersion
         {
