PWBarycenter fix, Homeworld orbit change, more.
* Add a barycenter icon for Phyre-Wepor, Beddul-Dopale, and Gerro-Sandevestian. It doesn't work for Phyre-Wepor.
* Make Phyre-Wepor's binary orbit work a little more realistically (though I think the density of those objects are over an order of magnitude too low so they still need work.)
* Fix a bug where PW Barycenter was too large, somehow so it could be selected from a great distance.
* Add identifier/change identifier to match name for Arach, Drae, Beddul-Dopale_Barycenter, Beddul, Dopale.
* Make all orbit icons grayscale. This saves a small amount of storage space and does nothing to fix the icons not working beyond the Pyri system problem.
* Fix inverseRotThresholdAltitude on Schmev and Raft
* make Xeititit use the known working filepath for Schmev and Garner's icons, though the icon still does not show up in-game.
* Remove Eve, Duna, Laythe, and Jool from the scatterer PlanetsList.

--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/OlloAsteroids.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/OlloAsteroids.cfg
@@ -26,7 +26,7 @@
 			{
 				Body
 				{
-					body = Ollo
+					body = PJ2/Ollo
 					probability = 75 //functionality unknown, presumed inert
 					reached = false //spawn asteroids only once the body has been visited?
 					semiMajorAxis
