--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Arach.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Arach.cfg
@@ -3,6 +3,7 @@
 	Body
 	{
 		name = Arach
+		identifier = PJ2/Arach
 		cacheFile = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Cache/Arach.bin
 		Template
 		{
