--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Drae.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Drae.cfg
@@ -3,7 +3,7 @@
 	Body
 	{
 		name = Drae
-		identifier = PJ2/IlioAB_c_II
+		identifier = PJ2/Drae
 		cacheFile = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Cache/Drae.bin
 		Template
 		{
