--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e.cfg
@@ -6,11 +6,11 @@
 		identifier = PJ2/SandevistanGerroBarycenter
 		cacheFile = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/Cache/Barry.bin
 
-		Debug
-		{
-			exportMesh = True
-			update = True
-		}
+		//Debug
+		//{
+		//	exportMesh = True
+		//	update = True
+		//}
 
 		Template
 		{
@@ -23,6 +23,7 @@
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
 			color = 1,1,1,1
+			iconTexture = PJ2/KopernicusFiles/00_System/Icons/BarycenterIcon.png
 			
 			//orbital elements (DO NOT CHANGE)
 			//1 au (kerbal scale)
