--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PJ2_SettingsHack.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PJ2_SettingsHack.cfg
@@ -43,9 +43,8 @@
 			mode = OFF
 			icon = NONE
             
-			semiMajorAxis = 14959787070
-			//SMA in kAU:
-		    @semiMajorAxis *= 0.00699410425
+			semiMajorAxis = 107848650.45135319
+			period = 21600
 		}
 		ScaledVersion
 		{
