--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Garner/Garner.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Garner/Garner.cfg
@@ -76,9 +76,8 @@
 			color = 0.518,0.604,0.600,1
 			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/Icons/SpaceObject_Large.png
 
-			semiMajorAxis = 14959787070
-			//SMA in kAU:
-		    @semiMajorAxis *= 0.00699410425
+			semiMajorAxis = 107848650.45135319
+			period = 21600
 		}
 		ScaledVersion
 		{
