--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/IlioC_dt.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/IlioC_dt.cfg
@@ -6,7 +6,7 @@
 	{
 		//you can change the name and displayName but please do not change the identifier.
 		name = Beddul-Dopale_Barycenter
-		identifier = PJ2/IlioC_dt
+		identifier = PJ2/Beddul-Dopale_Barycenter
 		Template
 		{
 			name = Bop //placeholder
@@ -53,6 +53,7 @@
 			//orbital elements (DO NOT CHANGE)
 			//1 au (kerbal scale)
 			semiMajorAxis = 14959787070
+			iconTexture = PJ2/KopernicusFiles/00_System/Icons/BarycenterIcon.png
 			
 			//SMA in kAU:
 			@semiMajorAxis *= 0.0264
