--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/IlioC_dt_binarylarge.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/IlioC_dt_binarylarge.cfg
@@ -3,7 +3,7 @@
 	Body
 	{
 		name = Beddul
-		identifier = PJ2/IlioC_dt_binarylarge
+		identifier = PJ2/Beddul
 		cacheFile = PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/Cash/IlioC_dt_binarylarge.bin
 		Template
 		{
@@ -42,7 +42,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioC_dt
+			referenceBody = PJ2/Beddul-Dopale_Barycenter
 			color = 0.8,0.5,0.3,1
 			semiMajorAxis = 2695588.83324
 			
