--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/IlioC_dt_binarysmall.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/IlioC_dt_binarysmall.cfg
@@ -3,7 +3,7 @@
 	Body
 	{
 		name = Dopale
-		identifier = PJ2/IlioC_dt_binarysmall
+		identifier = PJ2/Dopale
 		cacheFile = PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/Cash/IlioC_dt_binarysmall.bin
 		Template
 		{
@@ -43,7 +43,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioC_dt
+			referenceBody = PJ2/Beddul-Dopale_Barycenter
 			color = 0.2,0.5,0.7,1
 			semiMajorAxis = 2976631.16676
 			
