--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/TB_Xeititit.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/TB_Xeititit.cfg
@@ -59,7 +59,9 @@
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
 			color = 0.53,0.326,0.306,1
-			iconTexture = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/Icons/LargeRock_Icon.png
+			//iconTexture = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/Icons/LargeRock_Icon.png
+			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/Icons/SpaceObject_Large.png
+			
 			
 			//orbital elements (DO NOT CHANGE)
 			//1 au (kerbal scale)
