--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_0_BarycenterPW.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_0_BarycenterPW.cfg
@@ -3,19 +3,24 @@
 	Body
 	{
 		name = BarycenterPW
-		cacheFile = PJ2/Kopernicusfiles/3_Outersystem/IlioABC_d/Cache/BarycenterPW.bin
+		cacheFile = PJ2/KopernicusFiles/3_Outersystem/IlioABC_d/Cache/BarycenterPW.bin
 		identifier = PJ2/BarycenterPW
 		Template
 		{
-			name = Jool
+			name = Bop
 		}
 		Properties
 		{
-			description = Phrye-Wepor is a binary asteroid system orbiting Kialla at a distance. This makes it somewhat unique, being a circumbinary binary system. Additionally, the twin asteroids themselves are quite interesting--despite being the same size, Phrye is more than twice as massive, and they each have roughly opposite spectral features. Overall, this makes for quite an interesting destination, if you can make it out this far. [electricpants]
+			description = Phrye-Wepor is a binary asteroid system orbiting Kialla at a distance. This makes it somewhat unique, being a circumbinary binary system. Additionally, the twin asteroids themselves are quite interesting--despite being the same size, Phrye is more than twice as massive, and they each have roughly opposite spectral features. Overall, this makes for quite an interesting destination, if you can make it out this far.\n-electricpants
 			displayName = Phyre-Wepor Barycenter^N
 			radius = 9000
 			mass = 8.03e15
-			sphereOfInfluence = 60000
+			
+			//2.51e15+5.52e15
+			//semimajoraxis = 40000
+			//SMA_A = 12503.1133
+			//SMA_B = 27496.8867
+			
 		}
 		Orbit
 		{
@@ -28,16 +33,15 @@
 			meanAnomalyAtEpochD = 18
 			epoch = 0
 			color = RGBA(200, 200, 200, 255)
-			icon = NONE
+			iconTexture = PJ2/KopernicusFiles/00_System/Icons/BarycenterIcon.png
 		}
 		ScaledVersion
 		{
-			type = Vacuum
 			invisible = true
 		}
-		Atmosphere
+		!Atmosphere{}
+		!PQS
 		{
-			enabled = false
 		}
 	}
 }
