--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_2_Wepor.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_2_Wepor.cfg
@@ -17,7 +17,7 @@
 			mass = 2.51e15
 			tidallyLocked = true
 			albedo = 0.9
-			sphereOfInfluence = 16000
+			sphereOfInfluence = 20000
 			inverseRotThresholdAltitude = 13000
 			maxZoom = 40000
 			biomeMap = PJ2/Kopernicusfiles/3_Outersystem/IlioABC_d/PluginData/Wepor_biome.png
@@ -46,7 +46,8 @@
 		Orbit
 		{
 			referenceBody = PJ2/BarycenterPW
-			semiMajorAxis = 20000
+			semiMajorAxis = 27496.8867
+			period = 68669.61080261099
 			eccentricity = 0
 			inclination = 0
 			longitudeOfAscendingNode = 0
