--- a/GameData/PJ2/Scatterer/PlanetsList.cfg
+++ b/GameData/PJ2/Scatterer/PlanetsList.cfg
@@ -3,8 +3,12 @@
 {
 	@scattererCelestialBodies
 	{
-		//Placeholder Kerbin
+		//i dont think all this, except for kerbin, is necessary, but it might fix a bug that only one person had. i dunno maybe also some nullref spam.
 		!Item:HAS[#celestialBodyName[Kerbin]]{}
+		!Item:HAS[#celestialBodyName[Eve]]{}
+		!Item:HAS[#celestialBodyName[Duna]]{}
+		!Item:HAS[#celestialBodyName[Laythe]]{}
+		!Item:HAS[#celestialBodyName[Jool]]{}
 		Item
 		{
 			celestialBodyName = Kerbin
