--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/Homeworld.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/Homeworld.cfg
@@ -46,10 +46,8 @@
 		PostSpawnOrbit
 		{
 			%referenceBody = PJ2/C_Pyri
-			%semiMajorAxis = 14959787070
-			
-			//SMA in kAU:
-			@semiMajorAxis *= 0.00699410425
+			%semiMajorAxis = 107848650.45135319
+			//%period = 21600
 		}
 		@Properties
 		{
