--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/6_Asteroid_Schmev.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/6_Asteroid_Schmev.cfg
@@ -19,6 +19,7 @@
 			radius = 69420
 			initialRotation = 190
 			tidallyLocked = True
+			inverseRotThresholdAltitude = 50000
 			
 			//2.3 gcm3
 			mass = 3.225083e19
