Dord Biomes & WolfRayet Asteroid Scidefs
* Change Dord's description slightly to make it a little clearer.
* Fix a biome name on Gershmurzelen.
* Add Dord biome map and biomes
* Convert Dord textures to dds
* Add Wolf-Rayet's science definitions for all of her asteroids in the Early Game Belt.

--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/1_Asteroid_SubArmstrongDord.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/1_Asteroid_SubArmstrongDord.cfg
@@ -14,7 +14,7 @@
 		Properties
 		{
 			displayName = Dord^N
-			description = Dord is a large asteroid, the largest known body to orbit closer to Pyri than Armstrong. Its orbit can bring it remarkably close to Armstrong, making it an interesting observing target for amateurs on the twilight rim. It has several notable albedo features on its surface, hopefully belying an interesting history- it's quite possible that Dord is one of the more accessible protoplanetary bodies.\nDord's name comes from some of the earliest observational records known of the asteroid- Ramblefraz Kerman, its likely discoverer, initially believed that it was two objects, which he nicknamed "big D" and "little d" until he realized that it was very hard to tell them apart. The name comes from a caption on one of his sketches: "D or d?" \n-Luna, Wolf-Rayet, and Levana
+			description = Dord is a large asteroid, the largest known body to orbit closer to Pyri than Armstrong. Its orbit can bring it remarkably close to Armstrong, making it an interesting observing target for amateur astronomers on the twilight rim. It has several notable albedo features on its surface, hopefully belying an interesting history- it's quite possible that Dord is one of the more accessible protoplanetary bodies.\nDord was discovered by an astronomer, Ramblefraz Kerman, who was searching for evidence of a counter-planet on the opposite side of the central fire. Ramblefraz initially believed that it was two objects, which he nicknamed "big D" and "little d" until he realized that it was very hard to tell them apart. The name comes from a caption on one of his sketches: "D or d?" \n-Luna, Wolf-Rayet, and Levana
 			
 			//the radius given in the template is the average radius. If you use a shapemap, consider reducing the ksp "sea level" radius to keep the average radius the same.
 			radius = 33523
@@ -26,8 +26,119 @@
 			
 			ScienceValues
             {
-
+				
             }
+			biomeMap = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/PluginData/Dord_Biomes.png
+			Biomes
+			{
+				Biome
+				{
+					name = Pupil
+					displayName = Mare Pupil^N
+					color = RGBA(10,25,40,255)
+					value = 1
+				}
+				Biome
+				{
+					name = Iris
+					displayName = Mare Iris^N
+					color = RGBA(49,76,77,255)
+					value = 1
+				}
+				Biome
+				{
+					name = IrisCrater
+					displayName = Iris Crater^N
+					color = RGBA(0,116,122,255)
+					value = 1
+				}
+				Biome
+				{
+					name = ConcentricRidges
+					displayName = Concentric Ridges^N
+					color = RGBA(159,174,185,255)
+					value = 1
+				}
+				Biome
+				{
+					name = NearLow
+					displayName = Nearside Lowlands^N
+					color = RGBA(213,189,188,255)
+					value = 1
+				}
+				Biome
+				{
+					name = NearHigh
+					displayName = Nearside Highlands^N 
+					color = RGBA(228,220,219,255)
+					value = 1
+				}
+				Biome
+				{
+					name = NearCraters
+					displayName = Nearside Craters^N
+					color = RGBA(160,56,134,255)
+					value = 1
+				}
+				Biome
+				{
+					name = SouthVolcano
+					displayName = Cobra Head^N
+					color = RGBA(253,243,155,255)
+					value = 1
+				}
+				Biome
+				{
+					name = Rifts
+					displayName = Rifts^N
+					color = RGBA(113,41,0,255)
+					value = 1
+				}
+				Biome
+				{
+					name = FarCraters
+					displayName = Farside Craters^N
+					color = RGBA(211,108,86,255)
+					value = 1
+				}
+				Biome
+				{
+					name = RiftedBasin
+					displayName = Rifted Impact Basin^N
+					color = RGBA(255,148,195,255)
+					value = 1
+				}
+				Biome
+				{
+					name = FarBasin
+					displayName = Farside Impact Basin^N
+					color = RGBA(255,198,146,255)
+					value = 1
+				}
+				Biome
+				{
+					name = FarLow
+					displayName = Farside Lowlands^N
+					color = RGBA(244,193,189,255)
+					value = 1
+				}
+				Biome
+				{
+					name = FarHigh
+					displayName = Farside Highlands^N
+					color = RGBA(255,225,220,255)
+					value = 1
+				}
+				Biome
+				{
+					name = Caldera
+					displayName = Caldera^N
+					color = RGBA(217,202,82,255)
+					value = 1
+				}
+				
+			}
+			
 		}
 		Orbit
 		{
@@ -59,8 +170,8 @@
 			}
 			OnDemand
 			{
-				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/PluginData/Dord_Color.png
-				normals = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/PluginData/Dord_Normal.png
+				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/PluginData/Dord_Color.dds
+				normals = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/PluginData/Dord_Normal.dds
 			}
 		}
 		PQS
@@ -118,7 +229,7 @@
 				}
 				VertexColorMap
 				{
-					map = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/PluginData/Dord_Color.png
+					map = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/PluginData/Dord_Color.dds
 				}
 			}
 		}
