--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/7_Asteroid_Gershmurzelen.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/7_Asteroid_Gershmurzelen.cfg
@@ -36,7 +36,7 @@
 				Biome
 				{
 					name = Collar
-					displayName = Antipyrian Flats
+					displayName = Collar
 					color = #aa3232
 					value = 1
 				}
