--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/1_Viszra.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/1_Viszra.cfg
@@ -28,6 +28,8 @@
 			biomeMap = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/PluginData/Viszra_Biomes.png
 			Biomes
 			{
+				//Vizra is a meat planet, not out of cosmic horror or evil, but for humor.
+				//https://www.youtube.com/watch?v=ZP7K9SycELA
 				Biome
 				{
 					name = Volcano
