More science defs; new Sinacin texture
* Tholin has sent in some science definitions for Haut-Oklo.
* New science definitions for Dord & Rider.
* Possible fix for a bug regarding scatterer and force-opengl on Bil & Jotunn.
* New scaledspace texture for Sinacin by Cloverdove.
* Reduce heightmap deformity on Rangon dramatically.

--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/ScienceDefs/Luna/Luna'sAsteroidsScienceDefs.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/ScienceDefs/Luna/Luna'sAsteroidsScienceDefs.cfg
@@ -7,6 +7,10 @@
 		WeegletossSrfLanded = With your ship set down in amongst the boulders and pebbles and dirt, the "ground" such as it is barely preventing you from sinking in, you wonder what else could be buried here. What lost secrets could be found inside this tiny little world? Perhaps undiscovered sorts of candy, lost change, assorted trinkets, or a piece of hay or a needle.
 		WeegletossDarkBoulder = Why's this one boulder so much darker than all the others?
 		WeegletossRubblePile = Weegletoss is a type of asteroid known as a "Rubble Pile," meaning that it is a collection of loose rocks and boulders held together by gravity and static forces. But this rubble pile seems to have a rubble pile *on* it--as in, a piled up heap of slightly different boulders and dust. Bizarre...
+		
+		RiderInSpace = Rider's shape is like something of an oblate potato, but oddly, it seems to be lying on its side. Shouldn't Rider tumble on its intermediate axis?
+		
+		DordInSpace = Impact craters are suspiciously sparse on Dord, indicating recent geological activity.
 	
 	}
 }
@@ -17,6 +21,25 @@
 		WeegletossSrfLanded = Weegletoss is a stony rubble pile with a small amount of volatile ices sequestered deep beneath the surface. It is composed of largely very similar kinds of rock--which is unexpected for an object composed of lots of impactors.
 		WeegletossSrfLandedRubblePile = The rubble pile on the rubble pile is extremely dry, in contrast to other parts of the asteroid. This could be an entire moon that dropped out of Weegletoss's skies.
 		WeegletossSrfLandedDarkBoulder = This one particular boulder is especially carbon-rich--it didn't come from whatever object formed Weegletoss, it had to have come from elsewhere. It also has a higher concentration of volatile ices than expected.
+		
+		DordSrfLanded = Dord's composition is primarily stony and poor in volatile ices.
+		DordSrfLandedPupil = The sample is a pitch-like molten rock, some kind of fluid which has been erupted due to the immense heat and has slowly run into the low-lying basin directly facing Pyri. It is rich in titanium and copper.
+		DordSrfLandedIris = The composition of the surface is a basaltic rock rich in titanium and copper.
+		DordSrfLandedRifts = The low lying regions of the rifts contain rusty iron oxides.
+		DordSrfLandedFarHigh = The surface is primarily stony, with a bright icy frosting keeping it nice and shiny.
+		DordSrfLandedFarLow = The surface is primarily stony, with a bright icy frosting keeping it nice and shiny.
+		DordSrfLandedFarCraters = The surface is primarily stony, with a bright icy frosting keeping it nice and shiny.
+		DordSrfLandedRiftedBasin = The surface is primarily stony, with some iron oxides mixed into the permafrost.
+		DordSrfLandedFarBasin = The surface is primarily stony, with a bright icy frosting keeping it nice and shiny.
+		DordSrfLandedIrisCrater = This crater seems to be only a few tens or hundreds of millions of years old, indicating that whatever flooded it with the signature blue-green lavas found in the Iris must have done so recently.
+		DordSrfLandedCaldera = The material deep within these calderas show signs of relatively recent volcanism, within the last few tens of millions of years.
+		DordSrfLandedSouthVolcano = The Cobra Head volcano shows signs of extremely recent volcanism, within the last hundred thousand or million years. The lava tube collapsed only a few thousand years ago!
+		
+		RiderSrfLanded = Rider's surface is carbonaceous and volatile-rich, with some sort of protective layer a few centimeters deep, like fried ice cream. If it weren't for all the extra volatiles, it'd be a close match for SCH-family meteorites.
+		RiderSrfLandedEjectaComet = The surface is more volatile rich here, but not by a lot--the brighter color here seems to be a result of a deficit in surface weathering, indicating that this was a very recent impact event.
+		RiderSrfLandedEjectaButterfly = The surface is more volatile rich here, but not by a lot--the brighter color here seems to be a result of a deficit in surface weathering, indicating that this was a very recent impact event.
+		RiderSrfLandedEjecta = The surface is more volatile rich here, but has a carbon deficit. Fascinating.
+		RiderSrfLandedMountains = The samples are more carbon-rich here, and closely resemble SCH-family meteorites.
 	}
 }
 @EXPERIMENT_DEFINITION:HAS[#id[evaReport]]:FOR[PJ2]
@@ -27,6 +50,10 @@
 		WeegletossSrfLandedSmallCraters = These minor depressions are so slight you can barely tell they're depressions at all--but they seem to be extremely subtle remnants of old impacts... everything sorta ends up smoothed over on these things.
 		WeegletossSouthBasin = This "basin" (though by the standards of any other world it'd be a mere minor depression) seems to have a smoother surface than other parts of Weegletoss, except for the largest of boulders in the area.
 		WeegletossNorthBasin = This "basin" (though by the standards of any other world it'd be a mere minor depression) seems to have a smoother surface than other parts of Weegletoss, except for the largest of boulders in the area.
+		
+		DordSrfLanded = You search the skies for the other planets. Is Armstrong up? Wait... is THAT it?
+		DordSrfLandedIris = The terrain is relatively flat here.
+		DordSrfLandedPupil = The terrain is almost perfectly flat here, and very dark. Is it your imagination or is the surface kind of... sticky?
 	}
 }	
 @EXPERIMENT_DEFINITION:HAS[#id[temperatureScan]]:FOR[PJ2]
@@ -42,6 +69,17 @@
 	{
 		Weegletoss = The mystery goo has gotten monumentally weegled.
 		WeegletossSrfLanded = The mystery goo can't handle these weegle levels and has disappeared entirely. WE CAN NOT FIND IT. Send help.
+		
+		DordSrfLanded = The mystery goo is able to keep cool... maybe even a little too cool, as it begins to shiver.
+		Dord = The mystery goo is boiling, and even as it creates a rubbery protective layer, it seems to almost char.
+		DordNearLow = The mystery goo is boiling, and even as it creates a rubbery protective layer, it seems to almost char.
+		DordNearHigh = The mystery goo is boiling, and even as it creates a rubbery protective layer, it seems to almost char.
+		DordNearCraters = The mystery goo is boiling, and even as it creates a rubbery protective layer, it seems to almost char.
+		DordConcentricRidges = The mystery goo is boiling, and even as it creates a rubbery protective layer, it seems to almost char.
+		DordIrisCrater = The mystery goo is boiling, and even as it creates a rubbery protective layer, it seems to almost char.
+		DordIris = The mystery goo is boiling, and even as it creates a rubbery protective layer, it seems to almost char.
+		DordPupil = The mystery goo is boiling, and even as it creates a rubbery protective layer, it seems to almost char.
+		DordSouthVolcano = The mystery goo is boiling, and even as it creates a rubbery protective layer, it seems to almost char.
 	}
 }
 @EXPERIMENT_DEFINITION:HAS[#id[barometerScan]]:FOR[PJ2]
@@ -49,6 +87,8 @@
 	@RESULTS
 	{
 		Weegletoss = you are positively WEEGLED by the lack of a reading on the barometer.
+		
+		DordSrfLanded = Dord lacks any atmosphere whatsoever.
 	}
 }
 @EXPERIMENT_DEFINITION:HAS[#id[gravityScan]]:FOR[PJ2]
@@ -57,6 +97,11 @@
 	{
 		Weegletoss = The gravioli map shows that Weegletoss is essentially one homogenous mass of stuff, with some cavities and voids inside and one particularly large 50-meter boulder stuffed somewhere inside.
 		WeegletossRubblePile = The mound of stuff has a slightly higher density than expected, implying there is a single large chunk of rock at its center, like the core of a small tiny little baby moon.
+		
+		DordInSpaceHigh = The gravioli count isn't especially reliable for a body of such a small size, but it's enough to suggest Dord could be internally differentiated.
+		DordPupil = Mare Pupil appears to be the location with the highest gravity. It's almost as if it's sitting directly on top of an iron core.
+		DordIris = Mascons indicate Mare Iris is composed of dense material compared to the rest of the planetoid.
+		Dord = Dord appears to have a heavy iron core with a rocky mantle sticking off of one side. 
 	}
 }
 @EXPERIMENT_DEFINITION:HAS[#id[atmosphereAnalysis]]:FOR[PJ2]
@@ -65,6 +110,7 @@
 	{
 		Weegletoss = you are positively WEEGLED by the lack of a reading on the atmosphere analyzer.
 		
+		Dord = D or d? more like uh. there isn't any air here.
 	}
 }
 @EXPERIMENT_DEFINITION:HAS[#id[seismicScan]]:FOR[PJ2]
@@ -72,6 +118,8 @@
 	@RESULTS
 	{
 		WeegletossSrfLanded = You quake with fear as the instrument registers a quake. That. should. not. be. possib--oh. It's just the craft settling down into the regolith.
+		
+		Dord = The seismometer picks up a notable lack of much activity going on here.
 	}
 }
 @EXPERIMENT_DEFINITION:HAS[#id[mobileMaterialsLab]]:FOR[PJ2]
@@ -86,6 +134,8 @@
 	@RESULTS
 	{
 		Weegletoss = Weegletoss has a small induced magnetic field, indicating the presence of small amounts of iron in its minerals.
+		
+		Dord = Dord seems to have an induced magnetic field, and quite a strong one, indicating an enormous differentiated iron core.
 	}
 }
 
