--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/Scatterer/Jotunn_Atmo.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/Scatterer/Jotunn_Atmo.cfg
@@ -34,7 +34,7 @@ Scatterer_atmosphere
 				postProcessAlpha = 0.9
 				postProcessDepth = 0.02
 				extinctionTint = 0.8
-				openglThreshold = 10
+				openglThreshold = 1 //10
 			}
 			Item
 			{
@@ -47,7 +47,7 @@ Scatterer_atmosphere
 				postProcessAlpha = 0.9
 				postProcessDepth = 0.02
 				extinctionTint = 0.8
-				openglThreshold = 10
+				openglThreshold = 1 //10
 			}
 			Item
 			{
@@ -60,7 +60,7 @@ Scatterer_atmosphere
 				postProcessAlpha = 0.9
 				postProcessDepth = 0.08
 				extinctionTint = 0.8
-				openglThreshold = 10
+				openglThreshold = 1 //10
 			}
 		}
 	}
