--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f.cfg
@@ -16,7 +16,7 @@
 		Properties
 		{
 			displayName = Sinacin^N
-			description = Sinacin is a wretched MegaKerbin, having most of its atmosphere stole from it during formation by Glice. This left its core to accrete more and more rocks, metal, and asteroids. To add insult to injury, it has an incredibly toxic atmosphere, with high amounts of Carbon Monoxide. What lies below the clouds?  \n \nWARNING: ATTEMPT NO CREWED LANDING, GRAVITY IS LETHAL \n -Triston \n\n[ED NOTE: tell that to Rodlong Mesbinite -Luna]
+			description = Sinacin is a wretched MegaKerbin, having most of its atmosphere stole from it during formation by Glice. This left its core to accrete more and more rocks, metal, and asteroids. To add insult to injury, it has an incredibly toxic atmosphere, with high amounts of Carbon Monoxide. What lies below the clouds?  \n \nWARNING: ATTEMPT NO CREWED LANDING, GRAVITY IS LETHAL \n -Cloverdove & Triston \n\n[ED NOTE: tell that to Rodlong Mesbinite -Luna]
 			radius = 1592753
 			timewarpAltitudeLimits = 0 0 0 0 0 0 0 0
 			gravParameter = 2.5896284E+14
@@ -48,7 +48,7 @@
 				Biome
 				{
 					name = Irridiated_Flats
-					displayName = Irridiated Flats
+					displayName = Irradiated Flats
 					color = RGBA(255,255,255,255)
 					value = 1
 				}
