--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f_B.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f_B.cfg
@@ -13,7 +13,7 @@
 		Properties
 		{
 			displayName = Glice^N
-			description = Glice is the binary of Sinacin. Before the time of telescopes, Sinacin appeared to be a planet oscilating between white and blue in the night sky as people couldn't tell Sinacin and Glice apart. After the advent of the telescope, people were shocked to learn that Glice, despite being the less massive of the two, was actually bigger! Glice has an absolutely massive storm facing Sinacin, as Sinacin's tides ravage the ice giant. \n \n -Cloverdove
+			description = Glice is the binary of Sinacin. Before the time of telescopes, Sinacin appeared to be a planet oscilating between white and blue in the night sky, as people couldn't tell Sinacin and Glice apart. After the advent of the telescope, people were shocked to learn that Glice, despite being the less massive of the two, was actually bigger! Glice has an absolutely massive storm facing Sinacin, as Sinacin's tides ravage the ice giant. \n \n -Cloverdove
 			radius = 2548404
 			mass = 6.57E+23
 			albedo = 0.48
