--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/Scatterer/Bil-Exo.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/Scatterer/Bil-Exo.cfg
@@ -29,7 +29,7 @@ Scatterer_atmosphere
 				postProcessAlpha = 0.6
 				postProcessDepth = 0.5
 				extinctionTint = 1
-				openglThreshold = 10
+				openglThreshold = 1 //10
 				viewdirOffset = 0.024
 			}
 			Item
@@ -43,7 +43,7 @@ Scatterer_atmosphere
 				postProcessAlpha = 0.6
 				postProcessDepth = 0.65
 				extinctionTint = 1
-				openglThreshold = 10
+				openglThreshold = 1 //10
 				viewdirOffset = 0
 			}
 		}
