--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f.cfg
@@ -80,7 +80,6 @@
 			
 			OnDemand
 			{
-				normals = PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/PluginData/SinacinNormalMap.dds
 				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/PluginData/SinacinCloudMap.dds
 			}
 			Material
@@ -95,6 +94,9 @@
 				1.0 = RGBA(0,0,0,0)
 				}
 				specColor = 0,0,0,0
+				normals = BUILTIN/cloud_normal
+				bumpMapScale = 15,8
+				bumpMapOffset = 0,0
 			}
 		}
 		Atmosphere
