Armstrong Period, Sinacin Scatterer,
* Armstrong period should be very close to exactly 6 hours now, and identical to Lu & Garner's orbital period. Can't get them guaranteed exact until period changing for PostSpawnOrbit is fixed.
* Normal map for Sinacin.
* Rename all Sinacin planet config files to include their body name
* Replace all Sinacin planet identifiers to use the body name.
* Scatterer support for Sinacin system.
* Remove some unneeded lines from Zhandar, Bil, and Mani's scatterer configs.
* Change orbit line colors for Sinacin system to make them easier on the eyes.

--- a/GameData/PJ2/KopernicusFiles/0_Suns/C_Pyri.cfg
+++ b/GameData/PJ2/KopernicusFiles/0_Suns/C_Pyri.cfg
@@ -12,13 +12,10 @@
 		{
 			displayName = Pyri^N
 			
-			//1/10th scale Sun.
-			radius = 69570000
-			mass = 1.988435e28
+			radius = 7450947
+			gravParameter = 1.0617129376E+17
 			
-			//Multiply by Pyri's parameters.
-			@radius *= 0.1071
-			@mass *= 0.08
+			//mass = 1.590748e27
 			//luminosity = 0.00049 Lsol
 			//temperature = 2637 Kelvins
 			//color = 1.0000,0.6275,0.2784,1
