--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PJ2_SettingsHack.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PJ2_SettingsHack.cfg
@@ -43,8 +43,8 @@
 			mode = OFF
 			icon = NONE
             
-			semiMajorAxis = 107848650.45135319
-			period = 21600
+			semiMajorAxis = 107857816.739578455687
+			//period = 21600
 		}
 		ScaledVersion
 		{
