--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Garner/Garner.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Garner/Garner.cfg
@@ -76,8 +76,8 @@
 			color = 0.518,0.604,0.600,1
 			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/Icons/SpaceObject_Large.png
 
-			semiMajorAxis = 107848650.45135319
-			period = 21600
+			semiMajorAxis = 107857816.739578455687
+			//period = 21600
 		}
 		ScaledVersion
 		{
