--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Lu/Lu.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Lu/Lu.cfg
@@ -63,8 +63,8 @@
 			longitudeOfAscendingNode = -20
 			color = 0.576319873,0.467269987,0.513650298,1
 
-			semiMajorAxis = 107848650.45135319
-			period = 21600
+			semiMajorAxis = 107857816.739578455687
+			//period = 21600
 		}
 		ScaledVersion
 		{
