--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_Giant/Scatterer/Zhandar_Atmosphere.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_Giant/Scatterer/Zhandar_Atmosphere.cfg
@@ -1,4 +1,4 @@
-@Scatterer_atmosphere:FOR[AlternisKerbol]
+@Scatterer_atmosphere:FOR[PJ2]
 {
 	Atmo
 	{
@@ -32,8 +32,6 @@
 				postProcessAlpha = 0.779999971
 				postProcessDepth = 2.4000001
 				extinctionTint = 0
-				openglThreshold = 0
-				viewdirOffset = 0
 			}
 			Item
 			{
@@ -46,8 +44,6 @@
 				postProcessAlpha = 1
 				postProcessDepth = 0
 				extinctionTint = 0
-				openglThreshold = 0
-				viewdirOffset = 0
 			}
 		}
 	}
